# CreditReview

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  vercel.json
api/: index.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CalculatedResults.tsx  ExportButtons.tsx  FinancialStatementsTable.tsx  ReviewTable.tsx  SourcePopover.tsx  TickerInput.tsx  UnmappedSection.tsx
src/: __init__.py  cli.py
src/api/: __init__.py
src/api/routes/: export.py  extraction.py
src/calculators/: __init__.py  metrics.py  ratios.py  verification.py
src/extractors/: __init__.py  concept_mapper.py  llm_extractor.py  pdf_extractor.py  session_builder.py  value_extractor.py
src/fetchers/: __init__.py  logo.py  sec_edgar.py  yahoo.py
src/generators/: excel_export.py  extraction_log.py  narrative.py  pdf.py  word_report.py
src/models/: __init__.py  extraction.py
src/parsers/: __init__.py  csv_parser.py
src/templates/: report.html
tests/: __init__.py
