[project]
name = "financial-reporting"
version = "0.1.0"
description = "Generate financial reports from SEC EDGAR data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "yfinance>=0.2.0",
    "requests>=2.31.0",
    "anthropic>=0.40.0",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.0",
    "pillow>=12.1.0",
    "pdfplumber>=0.11.9",
]

[project.optional-dependencies]
dev = [
    "click>=8.1.0",
]

[project.scripts]
finreport = "src.cli:cli"
